# rag

./: .gitignore  README.md  config.py  pyproject.toml  run.py
data/: download_fiqa.py
notebooks/: bm25.py  evaluate.py  explore_data.py  rrf.py
notebooks/agent/: agentic.py  evaluate_agentic.py
notebooks/retrieval/: bm25.py  embed.py  explore_data.py  rerank.py
src/: fusion.py  reranker.py  retrievers.py
