[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.9",
    "cohere>=7.0.0",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
]

# ruff
[tool.ruff]
line-length = 120
